<resources>

    <string name="app_name">GeoPic</string>
    <string name="title_activity_main">GeoPic</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_venue_details">VenueDetails</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="checkins">Checkins</string>
    <string name="phone">Phone</string>
    <string name="take_picture">Take Picture</string>

</resources>